﻿drkns 09.11.2014 02:12:34 +0200 - build 4176

1. GCC.

drkns 09.11.2014 00:34:51 +0200 - build 4175

1. Уточнение 4174.

drkns 08.11.2014 23:16:10 +0200 - build 4174

1. Рефакторинг.

2. В некоторых случаях не обновлялась линейка клавиш при открытии редактора.

3. Добавим знание о IO_REPARSE_TAG_FILE_PLACEHOLDER (Windows 8.1 OneDrive).

zg 07.11.2014 12:33:42 +0200 - build 4173

1. с форума:
   При вызове из редактора из юзер меню такой команды
   lua: far.Message("from lua")
   во время показанного диалога последняя строка в редакторе закрашивается черным.

zg 07.11.2014 03:22:43 +0200 - build 4172

1. у каждого экранного объекта теперь есть в обязательном порядке родитель - окно.

drkns 06.11.2014 15:56:10 +0200 - build 4171

1. С форума: Excepton occured: bad allocation

zg 05.11.2014 16:44:44 +0200 - build 4170

1. уточнение 4047 для плагииновых панелей:
   Если открыть в панели .7z-файл, содержащий внутри папки, стать на папку и нажать CtrlQ, показывает:
   Folders          0
   Files            0
   Files size       0
   Allocated size   0 (0%)

drkns 02.11.2014 13:15:16 +0200 - build 4169

1. Ещё пара уточнений 4167.

drkns 02.11.2014 11:38:28 +0200 - build 4168

1. Уточнение 4167.

drkns 02.11.2014 00:53:53 +0200 - build 4167

1. Рефакторинг.

drkns 02.11.2014 00:38:57 +0200 - build 4166

1. Уточнение 4164.2.

svs 30.10.2014 09:39:35 +0300 - build 4165

1. SQLite 3.8.7.1

drkns 29.10.2014 21:40:58 +0200 - build 4164

1. Не падаем, если для открытия файла в редакторе не хватило памяти.

2. Пара мелочей.

w17 29.10.2014 18:50:54 +0300 - build 4163

1. Показываем номер кодовой страницы в предупреждении о проблемах перекодирования в редакторе.

w17 28.10.2014 16:39:44 +0300 - build 4162

1. FFILEEDIT_CODEPAGECHANGEDBYUSER/editor, CodePageChangedByUser/viewer - атавизмы.

w17 28.10.2014 10:06:51 +0300 - build 4161

1. Продолжаем 4150.

w17 27.10.2014 12:45:51 +0300 - build 4160

1. Продолжаем 4150.

zg 26.10.2014 16:39:00 +0200 - build 4159
